fix: overflow for multi dropdown

--- a/less/forum.less
+++ b/less/forum.less
@@ -1,4 +1,8 @@
-.Blomstra-Trello-modal{
+.Blomstra-Trello-modal {
+  .Modal-content {
+    overflow: visible;
+  }
+
   .TagLabel {
     & when (@config-dark-mode = false) {
       color: #000;
